--- a/src/main/resources/templates/cadastrarProdutos.html
+++ b/src/main/resources/templates/cadastrarProdutos.html
@@ -9,7 +9,7 @@
 <div th:if="${param.error}">
     Dados inválidos
 </div>
-<form th:action="@{/product}" method="post">
+<form th:action="@{/product}" method="post"  enctype="multipart/form-data">
     <input type="hidden" name="enable" value={true}>
     <div>
         <label>Nome: <input type="text" name="nome" ></label>
