SHOW IMAGES ROUTE

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 <div th:if="${param.logout}">
     Você esta desconectado
 </div>
-
+<img th:src="@{/product/img/1logo_grupo_policromia_horizontal.png}" width="250">
 <form th:action="@{/login}" method="post">
         <div>
             <label>Username: <input type="text" name="username" ></label>
